<?xml version="1.0" encoding="utf-8"?>

<!-- Copyright (c) 2012 The Chromium Authors. All rights reserved.

     Use of this source code is governed by a BSD-style license that can be
     found in the LICENSE file.
 -->

<resources>
    <string name="url_hint">Type URL Here</string>
    <string name="minus">-2</string>
    <string name="plus">+2</string>
    <string name="reset">Reset</string>
    <string name="fps">10</string>
    <string name="text_bushuang">0</string>
    <string name="bushuang">FeedbackScrolling</string>
    <string name="feedback">FeedbackPinching</string>
    <string name="savePower">start</string>
</resources>
