<?xml version="1.0" encoding="utf-8"?>

<!-- Copyright 2012 The Chromium Authors. All rights reserved.

     Use of this source code is governed by a BSD-style license that can be
     found in the LICENSE file.
 -->

<org.chromium.content_shell.Shell
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    <LinearLayout android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="@drawable/progress">
        <Button android:id="@+id/reset0"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/reset"
	    android:visibility="gone"
             />
        <Button android:id="@+id/savePowerBtn"
            
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/savePower"
	    android:visibility="visible"
             />
        <ImageButton android:id="@+id/stop_reload_button"
            android:layout_width="38dp"
            android:layout_height="38dp"
            android:visibility="gone"
            android:src="@android:drawable/ic_menu_close_clear_cancel"
            android:scaleType="centerCrop"
            android:contentDescription="@null" />
        <EditText android:id="@+id/url"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="bottom"
            android:textSize="18sp"
            android:singleLine="true"
            android:selectAllOnFocus="true"
            android:hint="@string/url_hint"
            android:inputType="textUri"
            android:imeOptions="actionGo" />
        <ImageButton android:id="@+id/prev"
            android:layout_width="38dp"
            android:layout_height="38dp"
            android:visibility="gone"
            android:src="@android:drawable/ic_media_previous"
            android:scaleType="center"
            android:contentDescription="@null" />
        <ImageButton android:id="@+id/next"
            android:layout_width="38dp"
            android:layout_height="38dp"
            android:visibility="gone"
            android:src="@android:drawable/ic_media_next"
            android:scaleType="center"
            android:contentDescription="@null" />
	
        <Button android:id="@+id/bushuang0"
	   
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bushuang"
	    android:visibility="gone"
             />
       <TextView
        android:id="@+id/text_bushuang0"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_bushuang"
	android:visibility="gone"
	 />
       <Button android:id="@+id/reset"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/reset"
       />

    </LinearLayout>

<LinearLayout android:id="@+id/toolbar1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
      >
        <Button android:id="@+id/bushuang"
	    android:visibility="visible"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bushuang"
             />

        <Button android:id="@+id/minus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/minus"
             />
        <TextView
        android:id="@+id/text_fps"       
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/fps" />
        <Button android:id="@+id/plus"          
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/plus"
             />

        <Button android:id="@+id/feedback"
	    android:visibility="visible"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/feedback"
             />
	<TextView
        android:id="@+id/text_bushuang"
	android:visibility="gone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_bushuang" />

    </LinearLayout>
    <FrameLayout android:id="@+id/contentview_holder"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />
</org.chromium.content_shell.Shell>
